update the server example

--- a/index.html
+++ b/index.html
@@ -108,10 +108,9 @@
 			application.
 			Then use the markup you would normally do
 			for html tables. On the table element add the <code>st-table</code> attribute to tell smart-table which collection
-			holds you data. Now you will be able to compose the table using the plugins.
+			holds your <strong>displayed data</strong>, (ie the one you are going to use in the repeater). Now you will be able to compose the table using the plugins.
 		</p>
 	</div>
-
 			<tabset>
 				<tab heading="Markup">
 <pre ng-non-bindable><code class="language-markup">&lt;table st-table="rowCollection" class="table table-striped">
@@ -171,6 +170,145 @@
 		Of course in this short example, smart-table does not bring much as we don't use any of the plugins but we are now ready to compose our table.
 	</p>
 
+	<p class="text-justify bg-danger padding">smart-table first creates a safe copy of your displayed collection, it will then modify the displayed collection (when sorting, filtering etc) based on its safe copy. So if you don't intend to modify the collection outside of the table, it will be all fine.
+		However, if you want to modify the collection (add, remove, edit) you will have to tell smart-table to watch the original collection so it can update its safe reference copy. This is were you use the <strong>stSafeSrc attribute</strong>
+	</p>
+
+	<h3 class="h3">stSafeSrc attribute</h3>
+
+	<p class="text-justify">Use it to tell smart-table which collection to watch if you intend to modify its content. Don't pay attention to the sort and filter directives for the moment but use the table and note how the data is correctly synced</p>
+
+	<tabset>
+		<tab heading="Markup">
+<pre ng-non-bindable><code class="language-markup">	&lt;div ng-controller="safeCtrl">
+
+		&lt;button type="button" ng-click="addRandomItem(row)" class="btn btn-sm btn-success">
+			&lt;i class="glyphicon glyphicon-plus">
+			&lt;/i> Add random item
+		&lt;/button>
+
+		&lt;table st-table="displayedCollection" st-safe-src="rowCollection" class="table table-striped">
+			&lt;thead>
+			&lt;tr>
+				&lt;th st-sort="firstName">first name&lt;/th>
+				&lt;th st-sort="lastName">last name&lt;/th>
+				&lt;th st-sort="birthDate">birth date&lt;/th>
+				&lt;th st-sort="balance">balance&lt;/th>
+			&lt;/tr>
+			&lt;tr>
+				&lt;th colspan="5">&lt;input st-search="" placeholder="global search ..." type="text"/>&lt;/th>
+			&lt;/tr>
+			&lt;/thead>
+			&lt;tbody>
+			&lt;tr ng-repeat="row in displayedCollection">
+				&lt;td>{{row.firstName}}&lt;/td>
+				&lt;td>{{row.lastName}}&lt;/td>
+				&lt;td>{{row.birthDate}}&lt;/td>
+				&lt;td>{{row.balance}}&lt;/td>
+				&lt;td>
+				&lt;button type="button" ng-click="removeItem(row)" class="btn btn-sm btn-danger">
+					&lt;i class="glyphicon glyphicon-remove-circle">
+					&lt;/i>
+				&lt;/button>
+				&lt;/td>
+			&lt;/tr>
+			&lt;/tbody>
+		&lt;/table>
+
+	&lt;/div></code></pre>
+		</tab>
+		<tab heading="javascript">
+<pre><code class="language-javascript">app.controller('safeCtrl', ['$scope', function ($scope) {
+
+    var firstnames = ['Laurent', 'Blandine', 'Olivier', 'Max'];
+    var lastnames = ['Renard', 'Faivre', 'Frere', 'Eponge'];
+    var dates = ['1987-05-21', '1987-04-25', '1955-08-27', '1966-06-06'];
+    var id = 1;
+
+    function generateRandomItem(id) {
+
+        var firstname = firstnames[Math.floor(Math.random() * 3)];
+        var lastname = lastnames[Math.floor(Math.random() * 3)];
+        var birthdate = dates[Math.floor(Math.random() * 3)];
+        var balance = Math.floor(Math.random() * 2000);
+
+        return {
+            id: id,
+            firstName: firstname,
+            lastName: lastname,
+            birthDate: new Date(birthdate),
+            balance: balance
+        }
+    }
+
+    $scope.rowCollection = [];
+
+    for (id; id < 5; id++) {
+        $scope.rowCollection.push(generateRandomItem(id));
+    }
+
+    $scope.displayedCollection = angular.copy($scope.rowCollection);
+
+    //add to the real data holder
+    $scope.addRandomItem = function addRandomItem() {
+        $scope.rowCollection.push(generateRandomItem(id));
+        id++;
+    };
+
+    //remove to the real data holder
+    $scope.removeItem = function removeItem(row) {
+        var i = 0, l = $scope.rowCollection.length, index = -1;
+        for (i; i < l; i++) {
+            if (angular.equals(row, $scope.rowCollection[i])) {
+                index = i;
+                break
+            }
+        }
+
+        if (index !== -1) {
+            $scope.rowCollection.splice(index, 1);
+        }
+    }
+}]);</code></pre>
+		</tab>
+	</tabset>
+	
+	<div ng-controller="safeCtrl">
+
+		<button type="button" ng-click="addRandomItem(row)" class="btn btn-sm btn-success">
+			<i class="glyphicon glyphicon-plus">
+			</i> Add random item
+		</button>
+
+		<table st-table="displayedCollection" st-safe-src="rowCollection" class="table table-striped">
+			<thead>
+			<tr>
+				<th st-sort="firstName">first name</th>
+				<th st-sort="lastName">last name</th>
+				<th st-sort="birthDate">birth date</th>
+				<th st-sort="balance">balance</th>
+			</tr>
+			<tr>
+				<th colspan="5"><input st-search="" placeholder="global search ..." type="text"/></th>
+			</tr>
+			</thead>
+			<tbody>
+			<tr ng-repeat="row in displayedCollection">
+				<td>{{row.firstName}}</td>
+				<td>{{row.lastName}}</td>
+				<td>{{row.birthDate}}</td>
+				<td>{{row.balance}}</td>
+				<td>
+				<button type="button" ng-click="removeItem(row)" class="btn btn-sm btn-danger">
+					<i class="glyphicon glyphicon-remove-circle">
+					</i>
+				</button>
+				</td>
+			</tr>
+			</tbody>
+		</table>
+
+	</div>
 	<div class="text-center"><a class="btn btn-primary"
 		 href="https://github.com/lorenzofox3/smart-table-website/tree/gh-pages/sections/basics"><i
 		class="glyphicon glyphicon-pencil"></i>improve the documentation</a></div>
@@ -614,7 +752,7 @@
 	</p>
 	<tabset><tab heading="markup">
 <pre ng-non-bindable><code class="language-markup">
-&lt;table st-table="rowCollection" st-pipe="callServer" class="table table-striped">
+&lt;table st-table="displayedCollection" st-safe-src="rowCollection" st-pipe="callServer" class="table table-striped">
 	&lt;thead>
 	&lt;tr>
 		&lt;th st-sort="firstName">first name&lt;/th>
@@ -633,7 +771,7 @@
 	&lt;/tr>
 	&lt;/thead>
 	&lt;tbody ng-hide="isLoading">
-	&lt;tr ng-repeat="row in rowCollection">
+	&lt;tr ng-repeat="row in displayedCollection">
 		&lt;td>{{row.firstName | uppercase}}&lt;/td>
 		&lt;td>{{row.lastName}}&lt;/td>
 		&lt;td>{{row.birthDate | date}}&lt;/td>
@@ -677,10 +815,12 @@
     }
 
     function getAPage() {
-        $scope.rowCollection = [];
+        var newData=[];
         for (var j = 0; j < 20; j++) {
-            $scope.rowCollection.push(createRandomItem());
+            newData.push(createRandomItem());
         }
+
+        $scope.rowCollection = newData;
     }
 
     $scope.callServer = function getData(tableState) {
@@ -708,12 +848,14 @@
     };
 
     getAPage();
+
+    $scope.displayedCollection = angular.copy($scope.rowCollection);
 }]);
 </code></pre>
 		</tab>
 	</tabset>
 	<div class="table-container">
-		<table st-table="rowCollection" st-pipe="callServer" class="table table-striped">
+		<table st-table="displayedCollection" st-safe-src="rowCollection" st-pipe="callServer" class="table table-striped">
 			<thead>
 			<tr>
 				<th st-sort="firstName">first name</th>
@@ -732,7 +874,7 @@
 			</tr>
 			</thead>
 			<tbody ng-hide="isLoading">
-			<tr ng-repeat="row in rowCollection">
+			<tr ng-repeat="row in displayedCollection">
 				<td>{{row.firstName | uppercase}}</td>
 				<td>{{row.lastName}}</td>
 				<td>{{row.birthDate | date}}</td>
