default throttle in a search directive

--- a/index.html
+++ b/index.html
@@ -550,6 +550,11 @@
 			</tbody>
 		</table>
 	</div>
+
+	<p class="bg-info padding text-justify">
+		Note there is a throttle of 400 ms by default which you can overwrite with the attribute <code>st-delay</code>
+	</p>
+
 	<div class="text-center">
 		<a class="btn btn-primary" href="https://github.com/lorenzofox3/smart-table-website/tree/gh-pages/sections/filter"><i class="glyphicon glyphicon-pencil"></i> improve the documentation</a>
 	</div>
@@ -827,16 +832,6 @@
                 $scope.isLoading = false;
             }, 2000);
         }
-
-
-        //throttle to avoid an http request on every keystroke in the search fields for examples
-        if (promise !== null) {
-            $timeout.cancel(promise);
-        }
-        promise = $timeout(function () {
-            callServer();
-            promise = null;
-        }, 500);
     };
 
     getAPage();
