--- a/sections/filter/markup.html
+++ b/sections/filter/markup.html
@@ -73,6 +73,11 @@
 			</tbody>
 		</table>
 	</div>
+
+	<p class="bg-info padding text-justify">
+		Note there is a throttle of 400 ms by default which you can overwrite with the attribute <code>st-delay</code>
+	</p>
+
 	<div class="text-center">
 		<a class="btn btn-primary" href="https://github.com/lorenzofox3/smart-table-website/tree/gh-pages/sections/filter"><i class="glyphicon glyphicon-pencil"></i> improve the documentation</a>
 	</div>
