--- a/sections/Introduction/markup.html
+++ b/sections/Introduction/markup.html
@@ -30,7 +30,7 @@
 		<li><a href="http://esvit.github.io/ng-table/#!/">ng-table</a></li>
 	</ul>
 
-	<p>If you want to play around, try this <a href="http://plnkr.co/edit/B0XgEbV5us79MictAKpy?p=info">plunker</a></p>
+	<p>If you want to play around, try this <a href="http://plnkr.co/edit/n2bShO?p=preview">plunker</a></p>
 
 	<div class="text-center">
 		<a class="btn btn-primary"
