update with new search

--- a/sections/basics/markup.html
+++ b/sections/basics/markup.html
@@ -94,7 +94,7 @@
 				&lt;th st-sort="balance">balance&lt;/th>
 			&lt;/tr>
 			&lt;tr>
-				&lt;th colspan="5">&lt;input st-search="" placeholder="global search ..." type="text"/>&lt;/th>
+				&lt;th colspan="5">&lt;input st-search="" class="form-control" placeholder="global search ..." type="text"/>&lt;/th>
 			&lt;/tr>
 			&lt;/thead>
 			&lt;tbody>
@@ -181,7 +181,7 @@
 				<th st-sort="balance">balance</th>
 			</tr>
 			<tr>
-				<th colspan="5"><input st-search="" placeholder="global search ..." type="text"/></th>
+				<th colspan="5"><input st-search="" class="form-control" placeholder="global search ..." type="text"/></th>
 			</tr>
 			</thead>
 			<tbody>
