--- a/sections/pagination/markup.html
+++ b/sections/pagination/markup.html
@@ -18,7 +18,7 @@
 		&lt;/tr>
 		&lt;tr>
 			&lt;th>
-				&lt;input st-search="firstName" placeholder="search for firstname" class="input-sm form-control" type="search"/>
+				&lt;input st-search="'firstName'" placeholder="search for firstname" class="input-sm form-control" type="search"/>
 			&lt;/th>
 			&lt;th colspan="4">
 				&lt;input st-search placeholder="global search" class="input-sm form-control" type="search"/>
@@ -84,7 +84,7 @@
 		</tr>
 		<tr>
 			<th>
-				<input st-search="firstName" placeholder="search for firstname" class="input-sm form-control" type="search"/>
+				<input st-search="'firstName'" placeholder="search for firstname" class="input-sm form-control" type="search"/>
 			</th>
 			<th colspan="4">
 				<input st-search placeholder="global search" class="input-sm form-control" type="search"/>
