--- a/index.html
+++ b/index.html
@@ -15,50 +15,37 @@
 </head>
 <body class="container-fluid" ng-controller="mainCtrl">
 <header class="navbar navbar-default navbar-fixed-top">
-	<div class="navbar-inner">
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-3"
-								ng-click="isCollapsed = !isCollapsed">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand visible-xs" href="#">Smart-Table</a>
-			</div>
-			<nav class="hidden-xs">
-				<ul class="nav navbar-nav">
-					<a href="#top" role="button" class="navbar-brand">
-						Smart-Table
-					</a>
+	<nav>
+		<ul class="nav navbar-nav" style="width: 100%;">
+			<a href="#top" role="button" class="navbar-brand">
+				Smart-Table
+			</a>
 
-					<li><a href="#section-intro">Introduction</a></li>
-					<li><a href="#section-basics">The basics</a></li>
-					<li><a href="#section-format">Format/Template</a></li>
-					<li class="dropdown">
-						<a role="button" class="dropdown-toggle">
-							Plugins <b class="caret"></b>
-						</a>
-						<ul class="dropdown-menu">
-							<li><a href="#section-sort">Sort data</a></li>
-							<li><a href="#section-filter">Filter data</a></li>
-							<li><a href="#section-selection">Select row(s)</a></li>
-							<li><a href="#section-pagination">Pagination</a></li>
-							<li><a href="#section-pipe">Pipe/Ajax</a></li>
-							<li><a href="#section-custom">Custom</a></li>
-						</ul>
-					</li>
+			<li><a href="#section-intro">Introduction</a></li>
+			<li><a href="#section-basics">The basics</a></li>
+			<li><a href="#section-format">Format/Template</a></li>
+			<li class="dropdown">
+				<a role="button" class="dropdown-toggle">
+					Plugins <b class="caret"></b>
+				</a>
+				<ul class="dropdown-menu">
+					<li><a href="#section-sort">Sort data</a></li>
+					<li><a href="#section-filter">Filter data</a></li>
+					<li><a href="#section-selection">Select row(s)</a></li>
+					<li><a href="#section-pagination">Pagination</a></li>
+					<li><a href="#section-pipe">Pipe/Ajax</a></li>
+					<li><a href="#section-custom">Custom</a></li>
 				</ul>
-			</nav>
-		</div>
-	</div>
+			</li>
+		</ul>
+	</nav>
 </header>
 <div class="header">
 	<h1 class="banner">Smart Table</h1>
-</p>
+	</p>
 </div>
-<div class="text-center"><a href="https://github.com/lorenzofox3/Smart-Table" class="btn btn-default btn-lg"><i class="glyphicon glyphicon-download"></i> Get the code</a></div>
+<div class="text-center"><a href="https://github.com/lorenzofox3/Smart-Table" class="btn btn-default btn-lg"><i
+	class="glyphicon glyphicon-download"></i> Get the code</a></div>
 <div class="main">
 <section id="section-intro" ng-controller="paginationCtrl">
 
