add documentation for sort by default feature

--- a/index.html
+++ b/index.html
@@ -459,6 +459,11 @@
 			</tbody>
 		</table>
 	</div>
+
+	<p class="bg-info padding text-justify">
+		Note you can ask to sort a column by default by adding the attribute <code>st-sort-default</code>. And if you set the value of this attribute to <code>"reverse"</code> then it will sort this column and reverse the order by default.
+	</p>
+
 	<div class="text-center"><a class="btn btn-primary" href="https://github.com/lorenzofox3/smart-table-website/tree/gh-pages/sections/sort"><i
 		class="glyphicon glyphicon-pencil"></i>improve the documentation</a></div>
 </section>
