add an example section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 					<li><a href="#section-custom">Custom</a></li>
 				</ul>
 			</li>
+			<li><a href="#examples-section">examples</a></li>
+
 		</ul>
 	</nav>
 </header>
@@ -997,6 +999,43 @@ app.directive('csSelect', function () {
 	</p>
 
 
+</section>
+<section class="clearfix" id="examples-section">
+	<h2 class="h2">More sophisticated examples</h2>
+
+	<p>This section aims to provide example to show how you can compose around smart-table. They remain basic but can
+		give ideas and inspiration.</p>
+
+	<h3 class="h3">Draggable headers</h3>
+
+	<p>An example on how to implement draggable headers so the row template can be reordered. It uses <a href="https://github.com/lorenzofox3/lrDragNDrop">lrDragNDrop</a> for the drag and drop logic.</p>
+
+	<div class="text-center">
+		<iframe style="border: 1px solid #999;width: 80%; height: 500px"
+						src="http://embed.plnkr.co/DRagFo" frameborder="0"
+						allowfullscreen="allowfullscreen">
+			Loading plunk...
+		</iframe>
+	</div>
+
+	<h3 class="h3">Pagination on scroll</h3>
+
+	<p>This example shows how to implement pagination on scroll and remove the previous tr nodes as the user scroll down.
+		You will need to implement the same kind of logic when scrolling up though. The scroll logic is based on <a href="https://github.com/lorenzofox3/lrInfiniteScroll">lrInfiniteScroll</a></p>
+
+	<div class="text-center">
+		<iframe style="border: 1px solid #999;width: 80%; height: 500px"
+						src="http://embed.plnkr.co/Qq2yfC" frameborder="0"
+						allowfullscreen="allowfullscreen">
+			Loading plunk...
+		</iframe>
+	</div>
+
+	<div class="text-center">
+		<a class="btn btn-primary"
+			 href="https://github.com/lorenzofox3/smart-table-website/tree/gh-pages/sections/examples"><i
+			class="glyphicon glyphicon-pencil"></i> improve the documentation</a>
+	</div>
 </section>
 </div>
 <footer class="padding" id="main-footer" class="center-block">
