--- a/sections/head/markup.html
+++ b/sections/head/markup.html
@@ -37,6 +37,8 @@
 					<li><a href="#section-custom">Custom</a></li>
 				</ul>
 			</li>
+			<li><a href="#examples-section">examples</a></li>
+
 		</ul>
 	</nav>
 </header>
