--- a/sections/examples/markup.html
+++ b/sections/examples/markup.html
@@ -29,6 +29,10 @@
 		</iframe>
 	</div>
 
+	<h3 class="h3">Persist table state in local storage</h3>
+
+	<p>This [example](http://plnkr.co/edit/ekwiNt?p=preview) shows how to implement a plugin to persist table state in the local storage so you are able to restore you table when the page is refreshed.</p>
+
 	<div class="text-center">
 		<a class="btn btn-primary"
 			 href="https://github.com/lorenzofox3/smart-table-website/tree/gh-pages/sections/examples"><i
