add fix headers example

--- a/index.html
+++ b/index.html
@@ -1047,6 +1047,17 @@ app.directive('csSelect', function () {
 			 href="https://github.com/lorenzofox3/smart-table-website/tree/gh-pages/sections/examples"><i
 			class="glyphicon glyphicon-pencil"></i> improve the documentation</a>
 	</div>
+
+	<h3 class="h3">Fix headers</h3>
+	<p>This example shows how to have fix headers with a pure css solution. It is also responsive as based on the flex-model. A directive has been added to be able to change the space ratio occupied by each column.</p>
+	<div class="text-center">
+		<iframe style="border: 1px solid #999;width: 80%; height: 500px"
+						src="http://embed.plnkr.co/Z7bSsB" frameborder="0"
+						allowfullscreen="allowfullscreen">
+			Loading plunk...
+		</iframe>
+	</div>
+
 </section>
 </div>
 <footer class="padding" id="main-footer" class="center-block">
