update to support FF for fix headers sample

--- a/sections/examples/markup.html
+++ b/sections/examples/markup.html
@@ -43,7 +43,7 @@
 	<p>This example shows how to have fix headers with a pure css solution. It is also responsive as based on the flex-model. A directive has been added to be able to change the space ratio occupied by each column.</p>
 	<div class="text-center">
 		<iframe style="border: 1px solid #999;width: 80%; height: 500px"
-						src="http://embed.plnkr.co/Z7bSsB" frameborder="0"
+						src="http://embed.plnkr.co/fcdXKE" frameborder="0"
 						allowfullscreen="allowfullscreen">
 			Loading plunk...
 		</iframe>
