--- a/index.html
+++ b/index.html
@@ -1065,5 +1065,15 @@ app.directive('csSelect', function () {
 		&#169; RENARD Laurent, smart-table is released under MIT Licence
 	</p>
 </footer>
+<script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	ga('create', 'UA-55364277-1', 'auto');
+	ga('send', 'pageview');
+
+</script>
 </body>
 </html>
