--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 		&lt;th st-sort="getters.firstName">first name&lt;/th>
 		&lt;th st-sort="lastName">last name&lt;/th>
 		&lt;th st-sort="birthDate">birth date&lt;/th>
-		&lt;th st-sort="balance">balance&lt;/th>
+		&lt;th st-sort="balance" st-skip-natural="true" >balance&lt;/th>
 		&lt;th>email&lt;/th>
 	&lt;/tr>
 	&lt;/thead>
@@ -446,7 +446,7 @@
 				<th st-sort="getters.firstName">first name</th>
 				<th st-sort="lastName">last name</th>
 				<th st-sort="birthDate">birth date</th>
-				<th st-sort="balance">balance</th>
+				<th st-sort="balance" st-skip-natural="true">balance</th>
 				<th>email</th>
 			</tr>
 			</thead>
@@ -464,6 +464,10 @@
 
 	<p class="bg-info padding text-justify">
 		Note you can ask to sort a column by default by adding the attribute <code>st-sort-default</code>. And if you set the value of this attribute to <code>"reverse"</code> then it will sort this column and reverse the order by default.
+	</p>
+
+	<p class="bg-info padding text-justify">
+		You can skip the "natural order" state by adding <code>st-skip-natural="true"</code> as attribute of your th element.
 	</p>
 
 	<div class="text-center"><a class="btn btn-primary" href="https://github.com/lorenzofox3/smart-table-website/tree/gh-pages/sections/sort"><i
