Stressing the importance of stSafeSrc

--- a/sections/basics/markup.html
+++ b/sections/basics/markup.html
@@ -73,6 +73,8 @@
 	</p>
 
 	<h3 class="h3">stSafeSrc attribute</h3>
+	
+	<p class="text-justify bg-danger padding">If you are bringing in data from a remote database, restful endpoint or ajax call, you must use the stSafeSrc attribute.</p>
 
 	<p class="text-justify">Use it to tell smart-table which collection to watch if you intend to modify its content. Don't pay attention to the sort and filter directives for the moment but use the table and note how the data is correctly synced</p>
 
