--- a/sections/basics/markup.html
+++ b/sections/basics/markup.html
@@ -69,12 +69,12 @@
 	</p>
 
 	<p class="text-justify bg-danger padding">smart-table first creates a safe copy of your displayed collection: it creates an other array by copying the <strong>references</strong> of the items. It will then modify the displayed collection (when sorting, filtering etc) based on its safe copy. So if you don't intend to modify the collection outside of the table, it will be all fine.
-		However, if you want to modify the collection (add item, remove item), or **if you load your data asynchronously via AJAX-Call**  you will have to tell smart-table to watch the original collection so it can update its safe copy. This is were you use the <strong>stSafeSrc attribute</strong>
+		However, if you want to modify the collection (add item, remove item), or <strong>if you load your data asynchronously (via AJAX-Call, timeout, etc)</strong> you will have to tell smart-table to watch the original collection so it can update its safe copy. This is were you use the <strong>stSafeSrc attribute</strong>
 	</p>
 
 	<h3 class="h3">stSafeSrc attribute</h3>
 	
-	<p class="text-justify bg-danger padding">If you are bringing in data from a remote database, restful endpoint or ajax call, you must use the stSafeSrc attribute.</p>
+	<p class="text-justify bg-danger padding">If you are bringing in data asynchronously (from a remote database, restful endpoint, ajax call, etc) you must use the stSafeSrc attribute.</p>
 
 	<p class="text-justify">Use it to tell smart-table which collection to watch if you intend to modify its content. Don't pay attention to the sort and filter directives for the moment but use the table and note how the data is correctly synced</p>
 
