--- a/sections/basics/markup.html
+++ b/sections/basics/markup.html
@@ -2,7 +2,7 @@
 	<h2 class="h2">The basics</h2>
 	<div class="row">
 		<p class="text-justify">
-			The first thing is to add the module <code>angular.module('myApp',['smart-table']</code> to you angular
+			The first thing is to add the module <code>angular.module('myApp',['smart-table']</code> to your angular
 			application.
 			Then use the markup you would normally do
 			for html tables. On the table element add the <code>st-table</code> attribute to tell smart-table which collection
