--- a/sections/pipe/markup.html
+++ b/sections/pipe/markup.html
@@ -165,7 +165,7 @@
 			</tbody>
 			<tfoot>
 			<tr>
-				<td class="text-center" st-pagination="" st-item-by-page="10" colspan="4">
+				<td class="text-center" st-pagination="" st-items-by-page="10" colspan="4">
 				</td>
 			</tr>
 			</tfoot>
